[tool.poetry]
name = "nndict"
version = "0.1.0"
description = "A dict that does not support None entries. Silently deletes entry if updated to null and works recursively."
authors = ["Tiago Santos <tiago.santos@vizidox.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
tox = "*"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
